<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.game.GameFragment">

    <data>

        <variable
            name="gameFragment"
            type="com.example.countrycapitalquiz.ui.game.GameFragment" />

        <variable
            name="gameViewModel"
            type="com.example.countrycapitalquiz.model.view.GameViewModel" />

        <variable
            name="isCountryGame"
            type="Boolean" />

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_between_elements">

            <TextView
                android:id="@+id/question_count"
                style="@style/Widget.CountryCapitalQuiz.TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/question_count(gameViewModel.questionCount, gameViewModel.length)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Question: 4/10" />

            <TextView
                android:id="@+id/score"
                style="@style/Widget.CountryCapitalQuiz.TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/score(gameViewModel.score)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Score: 3" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/country_capital_card_view"
                style="@style/Widget.CountryCapitalQuiz.CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_count">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/game_country_image"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        app:imageResource="@{gameViewModel.currentCountry.imageResourceId}"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/name"
                        style="@style/Widget.CountryCapitalQuiz.TextView.PrimaryLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_horizontal"
                        android:layout_marginStart="@dimen/margin_between_elements"
                        android:text="@{isCountryGame ? gameViewModel.currentCountry.capitalName : gameViewModel.currentCountry.countryName}"
                        tools:text="Canada" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/question"
                style="@style/Widget.CountryCapitalQuiz.TextView.Big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@{isCountryGame ? @string/question_country(gameViewModel.currentCountry.capitalName) : @string/question_capital(gameViewModel.currentCountry.countryName)}"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_capital_card_view"
                tools:text="What is the capital of Canada?" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field"
                style="@style/Widget.CountryCapitalQuiz.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:hint="@string/enter_your_guess"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skip"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:onClick="@{() -> gameFragment.onSkipAnswer()}"
                android:text="@string/skip"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintStart_toStartOf="@id/text_field"
                app:layout_constraintTop_toBottomOf="@id/text_field" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> gameFragment.onSubmitAnswer()}"
                android:text="@string/submit"
                app:layout_constraintBaseline_toBaselineOf="@id/skip"
                app:layout_constraintEnd_toEndOf="@id/text_field"
                app:layout_constraintStart_toEndOf="@+id/skip" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>